Bug 81271 - A minimizied, shaded window shows up as not minimized in kicker
Summary: A minimizied, shaded window shows up as not minimized in kicker
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 131380 207867 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-05-10 19:36 UTC by Florian Schanda
Modified: 2011-12-10 20:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Florian Schanda 2004-05-10 19:36:57 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc (GCC) 3.3.3 
OS:          Linux

Steps to reproduce:
* Shade a window
* minimize it

It will still look as if it were non-minimized in the panel.
Comment 1 Matt Rogers 2004-05-10 19:39:04 UTC
confirmed with CVS from today (20040510)
Comment 2 Maksim Orlovich 2004-05-10 19:50:25 UTC
This one is for you, Seli, I think. This just gets to KWin::WindowInfo::isMinimized() const, 

which does this:
   // NETWM 1.2 compliant WM - uses NET::Hidden for minimized windows
   if(( state() & NET::Hidden ) != 0
        && ( state() & NET::Shaded ) == 0 ) // shaded may have NET::Hidden too
        return true;

so this does not return true if a new WM is used and both Hidden + Shaded are set..
Comment 3 Bill Kendrick 2005-12-06 21:08:30 UTC
This seems to be affecting my wife with KDE 3.4.  She has the taskbar only list minimized windows.  If she minimizes a shaded window, it does not appear in the taskbar.  The only way to get to the window is to middle-click the desktop to bring up the Windows listing.
Comment 4 Andreas Kling 2006-07-26 07:29:07 UTC
*** Bug 131380 has been marked as a duplicate of this bug. ***
Comment 5 Lubos Lunak 2009-11-03 18:54:20 UTC
*** Bug 207867 has been marked as a duplicate of this bug. ***
Comment 6 Martin Flöser 2011-12-10 09:43:03 UTC
still valid with current master (that is 4.8)
Comment 7 Thomas Lübking 2011-12-10 20:27:48 UTC
Git commit 8a02a3839a866204ca22983900253b9d9bd46778 by Thomas Lübking.
Committed on 10/12/2011 at 15:29.
Pushed by luebking into branch 'master'.

unset/set NETWM shading state around minimizing

BUG: 81271
REVIEW: 103377

M  +6    -0    kwin/client.cpp

http://commits.kde.org/kde-workspace/8a02a3839a866204ca22983900253b9d9bd46778