unset/set NETWM shading state around minimizing

BUG: 81271
REVIEW: 103377